# signalbridge-oss

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  README.md  bootstrap-safe.ps1  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  quickstart.md  roadmap.md
examples/: config.sample.yaml  sample_payload.json
output/: validated.csv
signalbridge/: __init__.py  cli.py  config.py  models.py  routing.py
signalbridge/connectors/: rest_poller.py
signalbridge/normalization/: timestamps.py
signalbridge/sinks/: csv_sink.py  jsonl_sink.py
signalbridge/validation/: rules.py
tests/: invalid-config-5d87ff8fc12e4f548b83428ed4d7f001.yaml  test_cli.py  test_config.py  test_csv_sink.py  test_jsonl_sink.py  test_package.py  test_pipeline_flow.py  test_rest_poller.py  test_routing.py  test_rules.py  test_timestamps.py
