[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signalbridge-oss"
version = "0.1.0"
description = "Resilient time-series API ingestion, validation, anomaly preservation, and analytics-ready storage."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Yasir" }
]
dependencies = [
  "requests>=2.32.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "typer>=0.12.3"
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0"
]

[project.scripts]
signalbridge = "signalbridge.cli:app"

[tool.setuptools.packages.find]
include = ["signalbridge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
  "--basetemp=.pytest_tmp",
  "-p",
  "no:cacheprovider"
]
